<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_main">
        <CheckBoxPreference
            android:key="prefs_notification"
            android:title="@string/prefs_notification"
            android:summary="@string/prefs_notification_descr"/>
       <!-- <Preference
            android:key="prefs_alarm_numbers"
            android:title="@string/prefs_alarm_numbers"/>-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_user">
        <EditTextPreference android:key="prefs_user_name"
            android:title="@string/prefs_user_name"
            android:dialogMessage="@string/prefs_user_name_disclaimer"
            android:hint="@string/prefs_user_name_hint"
            android:inputType="textCapWords"/>
    </PreferenceCategory>
    <!--<PreferenceCategory android:title="@string/category_nfc">
        <Preference
            android:key="prefs_nfc_write"
            android:title="@string/prefs_nfc_write"/>
    </PreferenceCategory>-->
    <PreferenceCategory android:title="@string/category_alarm">
        <Preference
            android:key="prefs_alarm_texts"
            android:title="@string/prefs_alarm_texts"/>
    </PreferenceCategory>
</PreferenceScreen>