<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:id="@+id/dialog_title"
        android:layout_gravity="left|center_vertical"
        android:textSize="32sp"
        android:text="@string/dialog_edit_title"
        android:textColor="#707070"
        android:gravity="center_vertical"
        android:fontFamily="sans-serif-light"
        android:layout_marginLeft="18dp" />

    <View
        android:layout_below="@+id/dialog_title"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/main_green" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_edit_number_title"
        android:layout_below="@+id/dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:hint="@string/dialog_edit_number_title"
        android:inputType="textCapSentences" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_edit_number_nmb"
        android:layout_below="@+id/dialog_edit_number_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:hint="@string/dialog_edit_number_nmb"
        android:inputType="phone" />


</RelativeLayout>